--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
   </footer>
 
   <script>
-    const APPS_SCRIPT_URL = "https://script.google.com/macros/s/https://script.google.com/macros/s/AKfycbxYbWXqaa6Y6CdoA1c9BZv73dGBSCzFfMQYr23lz4ppRmSQnaE5STcgsga78uazWPUG/exec/exec"; // Substitua pelo seu Apps Script publicado (/exec)
+    const APPS_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxxSqISMSnLzCEdbPbpVF2MfGSi_Z4ekHrLRJ3Y71C9FuGUq4DuZd3B6vO25Pp3dr6J/exec/exec"; // Substitua pelo seu Apps Script publicado (/exec)
     const THANKYOU_URL = "/thankyou.html";
 
     const form = document.getElementById('leadForm');
