--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@ form.addEventListener('submit', async (e) => {
   try {
     const res = await fetch(APPS_SCRIPT_URL, {
       method: "POST",
+      mode: "no-cors", 
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify(payload)
     });
