--- a/index.html
+++ b/index.html
@@ -82,17 +82,21 @@
           <a href="#beneficios" class="btn alt">Ver benefícios</a>
         </div>
       </div>
-      <div class="card">
-        <div class="kicker">Resumo do e-book</div>
-        <h3 style="margin:6px 0 10px">O que você vai aprender</h3>
-        <ul style="margin:0; padding-left:18px; line-height:1.7; color:#e9e9e9">
-          <li>Onde automatizar primeiro (80/20)</li>
-          <li>Framework RPA + IA na prática</li>
-          <li>Casos rápidos por área (vendas, marketing, ops)</li>
-          <li>Métricas que importam e roadmap em 7 dias</li>
-        </ul>
-        <p class="muted" style="margin-top:10px">PDF leve · Leitura rápida · Aplicação imediata</p>
-      </div>
+  <div class="card">
+  <div class="kicker">Resumo do e-book</div>
+  <h3 style="margin:6px 0 10px">O que você vai aprender</h3>
+  <ul style="margin:0; padding-left:18px; line-height:1.7; color:#e9e9e9">
+    <li>Como pequenos negócios estão usando automação para crescer.</li>
+    <li>Exemplos práticos de automação em vendas, marketing e atendimento.</li>
+    <li>Maneiras simples de começar a automatizar hoje mesmo.</li>
+    <li>Como a IA pode potencializar seus resultados.</li>
+    <li>Passos claros para aplicar automação de forma inteligente.</li>
+  </ul>
+  <p class="muted" style="margin-top:10px">
+    📘 Leitura leve, prática e inspiradora — com resultados reais.
+  </p>
+</div>
+
     </div>
   </header>
 
