--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
   </section>
 
   <footer class="wrap">
-    © 2025 Intellih Tecnologia · <a href="#" style="color:var(--brand)">Política de Privacidade</a>
+    © 2025 Intellih Tecnologia · <a href="/politica.html" style="color:var(--brand)">Política de Privacidade</a>
   </footer>
 
 <script>
