--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
         <label for="desafio">Principal desafio</label>
         <textarea id="desafio" name="desafio" rows="4" placeholder="Conte rapidamente onde a automação ajudaria..."></textarea>
 
-        <div class="checkbox-wrap">
+       <div class="checkbox-wrap">
           <input id="lgpd" type="checkbox" required />
-          <label for="lgpd">Concordo em receber comunicações e com a <a href="#" target="_blank">política de privacidade</a>.</label>
-        </div>
+          <label for="lgpd">Concordo em receber comunicações e com a política de privacidade.</label>
+         </div>
 
         <button id="submitBtn" class="btn" type="submit" style="margin-top:16px">Enviar</button>
         <p id="msg" class="kicker" style="margin-top:10px"></p>
