--- a/index.html
+++ b/index.html
@@ -146,9 +146,12 @@
     <p class="muted" style="margin-top:10px">* Seus dados são usados apenas para o diagnóstico e envio de materiais relevantes.</p>
   </section>
 
-  <footer class="wrap">
-    © 2025 Intellih Tecnologia · <a href="/politica.html" style="color:var(--brand)">Política de Privacidade</a>
-  </footer>
+ <footer class="wrap">
+  © 2025 Intellih Tecnologia · 
+  <a href="https://www.intellih.com.br" target="_blank" style="color:var(--brand)">Visite nosso site</a> · 
+  <a href="/politica.html" style="color:var(--brand)">Política de Privacidade</a>
+</footer>
+
 
 <script>
 const APPS_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbz1kjrtKUyJtGcmpvB2UAvnvcBob_MWIisTCsBZuIc4X38uqIp76FPH6LCN1_Zt3-Q/exec";
