--- a/index.html
+++ b/index.html
@@ -107,6 +107,45 @@
       <div class="card"><h3>💰 ROI visível</h3><p class="kicker">Reduza custos, acelere resposta e converta melhor.</p></div>
     </div>
   </section>
+ <section id="dores" class="wrap" style="padding:48px 0;">
+  <h2 style="text-align:center;margin-bottom:32px;">O que a Automação Resolve</h2>
+  <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:18px;">
+    
+    <div class="card">
+      <h3>⏰ Tarefas repetitivas</h3>
+      <p class="kicker">Deixe o robô trabalhar por você. Automatize planilhas, e-mails e respostas.</p>
+    </div>
+
+    <div class="card">
+      <h3>💸 Custos desnecessários</h3>
+      <p class="kicker">Reduza retrabalhos e erros. Gaste tempo apenas no que gera lucro real.</p>
+    </div>
+
+    <div class="card">
+      <h3>💬 Falta de tempo para atender</h3>
+      <p class="kicker">Chatbots e fluxos automáticos cuidam dos contatos 24h por dia.</p>
+    </div>
+
+    <div class="card">
+      <h3>📉 Falta de controle</h3>
+      <p class="kicker">Relatórios automáticos e dashboards mostram tudo em tempo real.</p>
+    </div>
+
+    <div class="card">
+      <h3>🤯 Sobrecarga e estresse</h3>
+      <p class="kicker">Automação libera energia e tempo para pensar no crescimento.</p>
+    </div>
+
+    <div class="card">
+      <h3>📈 Dificuldade em escalar</h3>
+      <p class="kicker">Cresça sem contratar mais. Deixe os processos fluírem com automação.</p>
+    </div>
+
+  </div>
+  <p class="muted" style="text-align:center;margin-top:28px;">
+    🚀 Pequenas automações geram grandes resultados.
+  </p>
+</section>
 
   <section id="form" class="wrap">
     <div class="form">
