--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
   <meta name="description" content="Receba um diagnóstico gratuito de automação e baixe o e-book Automação Inteligente.">
   <link rel="icon" href="/favicon.ico" />
 
+  <!-- Meta Pixel Code -->
+  <script>
+    !(function(f,b,e,v,n,t,s){
+      if(f.fbq)return; n=f.fbq=function(){ n.callMethod ?
+      n.callMethod.apply(n,arguments) : n.queue.push(arguments) };
+      if(!f._fbq)f._fbq=n; n.push=n; n.loaded=!0; n.version='2.0';
+      n.queue=[]; t=b.createElement(e); t.async=!0;
+      t.src=v; s=b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t,s)
+    })(window, document, 'script', 'https://connect.facebook.net/en_US/fbevents.js');
+    
+    fbq('init', '3929736470503988');
+    fbq('track', 'PageView');
+
+    // Evento de engajamento (TimeOnPage10s)
+    setTimeout(() => {
+      fbq('trackCustom', 'TimeOnPage10s');
+    }, 10000);
+  </script>
+  <noscript>
+    <img height="1" width="1" style="display:none"
+         src="https://www.facebook.com/tr?id=3929736470503988&ev=PageView&noscript=1"/>
+  </noscript>
+  <!-- End Meta Pixel Code -->
+
   <style>
     :root {
       --bg:#0a0a0a; --fg:#ffffff; --muted:#bfbfbf;
@@ -75,28 +100,28 @@
         <h1>Automatize processos, reduza custos e <span style="color:var(--brand)">escale resultados</span>.</h1>
         <p class="sub">
           Receba um <b>diagnóstico gratuito</b> e baixe o e-book
-          <i>“Automação Inteligente para Pequenos Negócios”</i>.
+          <i>“Automação Inteligente”</i>.
         </p>
         <div class="cta">
           <a href="#form" class="btn">Quero meu diagnóstico + e-book</a>
           <a href="#beneficios" class="btn alt">Ver benefícios</a>
         </div>
       </div>
-  <div class="card">
-  <div class="kicker">Resumo do e-book</div>
-  <h3 style="margin:6px 0 10px">O que você vai aprender</h3>
-  <ul style="margin:0; padding-left:18px; line-height:1.7; color:#e9e9e9">
-    <li>Como pequenos negócios estão usando automação para crescer.</li>
-    <li>Exemplos práticos de automação em vendas, marketing e atendimento.</li>
-    <li>Maneiras simples de começar a automatizar hoje mesmo.</li>
-    <li>Como a IA pode potencializar seus resultados.</li>
-    <li>Passos claros para aplicar automação de forma inteligente.</li>
-  </ul>
-  <p class="muted" style="margin-top:10px">
-    📘 Leitura leve, prática e inspiradora — com resultados reais.
-  </p>
-</div>
 
+      <div class="card">
+        <div class="kicker">Resumo do e-book</div>
+        <h3 style="margin:6px 0 10px">O que você vai aprender</h3>
+        <ul style="margin:0; padding-left:18px; line-height:1.7; color:#e9e9e9">
+          <li>Como pequenos negócios estão usando automação para crescer.</li>
+          <li>Exemplos práticos de automação em vendas, marketing e atendimento.</li>
+          <li>Maneiras simples de começar a automatizar hoje mesmo.</li>
+          <li>Como a IA pode potencializar seus resultados.</li>
+          <li>Passos claros para aplicar automação de forma inteligente.</li>
+        </ul>
+        <p class="muted" style="margin-top:10px">
+          📘 Leitura leve, prática e inspiradora — com resultados reais.
+        </p>
+      </div>
     </div>
   </header>
 
@@ -107,45 +132,21 @@
       <div class="card"><h3>💰 ROI visível</h3><p class="kicker">Reduza custos, acelere resposta e converta melhor.</p></div>
     </div>
   </section>
- <section id="dores" class="wrap" style="padding:48px 0;">
-  <h2 style="text-align:center;margin-bottom:32px;">O que a Automação Resolve</h2>
-  <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:18px;">
-    
-    <div class="card">
-      <h3>⏰ Tarefas repetitivas</h3>
-      <p class="kicker">Deixe o robô trabalhar por você. Automatize planilhas, e-mails e respostas.</p>
-    </div>
 
-    <div class="card">
-      <h3>💸 Custos desnecessários</h3>
-      <p class="kicker">Reduza retrabalhos e erros. Gaste tempo apenas no que gera lucro real.</p>
+  <section id="dores" class="wrap" style="padding:48px 0;">
+    <h2 style="text-align:center;margin-bottom:32px;">O que a Automação Resolve</h2>
+    <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:18px;">
+      <div class="card"><h3>⏰ Tarefas repetitivas</h3><p class="kicker">Deixe o robô trabalhar por você. Automatize planilhas, e-mails e respostas.</p></div>
+      <div class="card"><h3>💸 Custos desnecessários</h3><p class="kicker">Reduza retrabalhos e erros. Gaste tempo apenas no que gera lucro real.</p></div>
+      <div class="card"><h3>💬 Falta de tempo para atender</h3><p class="kicker">Chatbots e fluxos automáticos cuidam dos contatos 24h por dia.</p></div>
+      <div class="card"><h3>📉 Falta de controle</h3><p class="kicker">Relatórios automáticos e dashboards mostram tudo em tempo real.</p></div>
+      <div class="card"><h3>🤯 Sobrecarga e estresse</h3><p class="kicker">Automação libera energia e tempo para pensar no crescimento.</p></div>
+      <div class="card"><h3>📈 Dificuldade em escalar</h3><p class="kicker">Cresça sem contratar mais. Deixe os processos fluírem com automação.</p></div>
     </div>
-
-    <div class="card">
-      <h3>💬 Falta de tempo para atender</h3>
-      <p class="kicker">Chatbots e fluxos automáticos cuidam dos contatos 24h por dia.</p>
-    </div>
-
-    <div class="card">
-      <h3>📉 Falta de controle</h3>
-      <p class="kicker">Relatórios automáticos e dashboards mostram tudo em tempo real.</p>
-    </div>
-
-    <div class="card">
-      <h3>🤯 Sobrecarga e estresse</h3>
-      <p class="kicker">Automação libera energia e tempo para pensar no crescimento.</p>
-    </div>
-
-    <div class="card">
-      <h3>📈 Dificuldade em escalar</h3>
-      <p class="kicker">Cresça sem contratar mais. Deixe os processos fluírem com automação.</p>
-    </div>
-
-  </div>
-  <p class="muted" style="text-align:center;margin-top:28px;">
-    🚀 Pequenas automações geram grandes resultados.
-  </p>
-</section>
+    <p class="muted" style="text-align:center;margin-top:28px;">
+      🚀 Pequenas automações geram grandes resultados.
+    </p>
+  </section>
 
   <section id="form" class="wrap">
     <div class="form">
@@ -173,10 +174,10 @@
         <label for="desafio">Principal desafio</label>
         <textarea id="desafio" name="desafio" rows="4" placeholder="Conte rapidamente onde a automação ajudaria..."></textarea>
 
-       <div class="checkbox-wrap">
+        <div class="checkbox-wrap">
           <input id="lgpd" type="checkbox" required />
           <label for="lgpd">Concordo em receber comunicações e com a política de privacidade.</label>
-         </div>
+        </div>
 
         <button id="submitBtn" class="btn" type="submit" style="margin-top:16px">Enviar</button>
         <p id="msg" class="kicker" style="margin-top:10px"></p>
@@ -185,58 +186,56 @@
     <p class="muted" style="margin-top:10px">* Seus dados são usados apenas para o diagnóstico e envio de materiais relevantes.</p>
   </section>
 
- <footer class="wrap">
-  © 2025 Intellih Tecnologia · 
-  <a href="https://www.intellih.com.br" target="_blank" style="color:var(--brand)">Visite nosso site</a> · 
-  <a href="/politica.html" style="color:var(--brand)">Política de Privacidade</a>
-</footer>
+  <footer class="wrap">
+    © 2025 Intellih Tecnologia · 
+    <a href="https://www.intellih.com.br" target="_blank" style="color:var(--brand)">Visite nosso site</a> · 
+    <a href="/politica.html" style="color:var(--brand)">Política de Privacidade</a>
+  </footer>
 
+  <script>
+  const APPS_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbz1kjrtKUyJtGcmpvB2UAvnvcBob_MWIisTCsBZuIc4X38uqIp76FPH6LCN1_Zt3-Q/exec";
+  const THANKYOU_URL = "/thankyou.html";
 
-<script>
-const APPS_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbz1kjrtKUyJtGcmpvB2UAvnvcBob_MWIisTCsBZuIc4X38uqIp76FPH6LCN1_Zt3-Q/exec";
-const THANKYOU_URL = "/thankyou.html";
+  const form = document.getElementById('leadForm');
+  const btn  = document.getElementById('submitBtn');
+  const msg  = document.getElementById('msg');
 
-const form = document.getElementById('leadForm');
-const btn  = document.getElementById('submitBtn');
-const msg  = document.getElementById('msg');
+  form.addEventListener('submit', async (e) => {
+    e.preventDefault();
+    msg.textContent = "Enviando...";
+    btn.disabled = true;
 
-form.addEventListener('submit', async (e) => {
-  e.preventDefault();
-  msg.textContent = "Enviando...";
-  btn.disabled = true;
+    const payload = {
+      nome:   document.getElementById('nome').value.trim(),
+      email:  document.getElementById('email').value.trim(),
+      whats:  document.getElementById('whats').value.trim(),
+      tipo:   document.getElementById('tipo').value,
+      desafio:document.getElementById('desafio').value.trim(),
+      origem: window.location.href,
+      ts: new Date().toISOString()
+    };
 
-  const payload = {
-    nome:   document.getElementById('nome').value.trim(),
-    email:  document.getElementById('email').value.trim(),
-    whats:  document.getElementById('whats').value.trim(),
-    tipo:   document.getElementById('tipo').value,
-    desafio:document.getElementById('desafio').value.trim(),
-    origem: window.location.href,
-    ts: new Date().toISOString()
-  };
+    try {
+      await fetch(APPS_SCRIPT_URL, {
+        method: "POST",
+        mode: "no-cors",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify(payload)
+      });
 
-  // -------- ENVIO DEFINITIVO SEM CORS / SEM TIMEOUT --------
-  try {
-    await fetch(APPS_SCRIPT_URL, {
-      method: "POST",
-      mode: "no-cors", // 👈 impede bloqueio de CORS
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify(payload)
-    });
+      // 🔹 Evento Meta: Lead
+      if (typeof fbq !== 'undefined') fbq('track', 'Lead');
 
-    // ✅ Redireciona mesmo sem resposta
-    msg.textContent = "✅ Enviado! Redirecionando...";
-    setTimeout(() => window.location.href = THANKYOU_URL, 1000);
+      msg.textContent = "✅ Enviado! Redirecionando...";
+      setTimeout(() => window.location.href = THANKYOU_URL, 1000);
 
-  } catch (err) {
-    console.error("❌ Erro ao enviar:", err);
-    msg.textContent = "❌ Erro ao enviar. Tente novamente.";
-  }
+    } catch (err) {
+      console.error("❌ Erro ao enviar:", err);
+      msg.textContent = "❌ Erro ao enviar. Tente novamente.";
+    }
 
-  btn.disabled = false;
-});
-</script>
-
-
+    btn.disabled = false;
+  });
+  </script>
 </body>
 </html>
